# Ipp

./: .gitignore  AUDIT.md  BUGFIX_INSTRUCTIONS.md  CONTRIBUTING.md  HANDOFF.md  IPP_FULL_AUDIT.md  README.md  REPL_TUTORIAL.md  ROADMAP_V2 (1).md  ROADMAP_V2.md  TUTORIAL.md  audit2.md  copy_files.ps1  ipp-runtime.js  main.py  new_audit.md  pyproject.toml  roadmap.md  run_tests.py  setup.py  test.ipp  test_both.ipp  test_class.ipp  test_do_debug.ipp  test_do_simple.ipp  test_export.ipp  test_json.ipp  test_multiline.ipp  test_output.txt  test_regex.ipp  test_repeat.ipp  test_stack_fix.ipp  test_strings.ipp  test_v0_3_1_files.ipp  test_v0_3_1_functions.ipp  test_v0_3_1_json.ipp  test_v0_3_1_lists_math.ipp  test_v0_3_1_multiline.ipp  test_v0_3_1_regex.ipp  test_v0_3_1_strings.ipp  (+5 more)
.github/workflows/: publish.yml
docs/: REGRESSION_TEST_ISSUES.md
examples/: benchmark_test.ipp  dog2.ipp  functions.ipp  pong_game.ipp  pong_game.py  pong_terminal.ipp  test_framework.ipp
ipp/: cli.py  main.py
ipp/interpreter/: interpreter.py
ipp/lexer/: lexer.py  token.py
ipp/lsp/: server.py
ipp/parser/: ast.py  parser.py
ipp/runtime/: builtins.py  canvas.py  highlighter.py  keyboard.py
ipp/vm/: bytecode.py  compiler.py  vm.py
ipp/wasm/: __init__.py  compiler.py
scripts/: bump_version.py
src/ippc/: __init__.py  vm.c  vm.h
temp_extract/Ipp-main/: .gitattributes
tests/: regression.py  test_tutorial_examples.ipp
tests/v05/: test_features.ipp
tests/v06/: test_features.ipp
tests/v07/: test_features.ipp
vscode-extension/: README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
web-playground/: README.md  index.html  ipp-bundle.js  ipp-syntax.json
(+197 files in other folders)
